--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
   "name": "pool-league-manager",
   "private": true,
-  "version": "1.0.0",
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview",
     "frontend:dev": "vite",
     "frontend:build": "vite build",
     "frontend:build:dev": "vite build --mode development",
     "frontend:preview": "vite preview",
     "backend:dev": "nodemon server.js",
-    "backend:start": "node server.js",
-    "lint": "eslint ."
+    "backend:start": "node server.js"
   },
   "keywords": [],
   "author": "",
