--- a/render.yaml
+++ b/render.yaml
@@ -18,7 +18,7 @@ services:
   - type: web
     name: pool-league-manager
     env: static
-    buildCommand: npm install && npm run build
+    buildCommand: npm run build
     staticPublishPath: ./dist
     routes:
       - type: rewrite
