--- a/render.yaml
+++ b/render.yaml
@@ -17,13 +17,12 @@ services:
 
   - type: web
     name: pool-league-manager
-    env: static
-    buildCommand: npm run build
-    staticPublishPath: ./dist
-    routes:
-      - type: rewrite
-        source: /*
-        destination: /index.html
+    env: node
+    buildCommand: npm ci && npm run build
+    startCommand: node server.js
+    envVars:
+      - key: PORT
+        value: 3000
     headers:
       - path: /*
         name: Cache-Control
