--- a/render.yaml
+++ b/render.yaml
@@ -18,8 +18,13 @@ services:
   - type: web
     name: pool-league-manager
     env: node
-    buildCommand: npm ci && npm run build
-    startCommand: node server.js
+    buildCommand: npm install terser && npm install && npm run build
+    startCommand: npm start
+    staticPublishPath: ./dist
+    routes:
+      - type: rewrite
+        source: /*
+        destination: /index.html
     envVars:
       - key: PORT
         value: 3000
