--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc && vite build && cp public/_redirects dist/",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "frontend:dev": "vite",
@@ -13,7 +13,8 @@
     "frontend:build:dev": "vite build --mode development",
     "frontend:preview": "vite preview",
     "backend:dev": "nodemon server.js",
-    "backend:start": "node server.js"
+    "backend:start": "node server.js",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -49,14 +50,21 @@
     "@radix-ui/react-toggle-group": "1.1.0",
     "@radix-ui/react-tooltip": "1.1.4",
     "@tanstack/react-query": "5.56.2",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "cmdk": "1.0.0",
+    "compression": "^1.8.0",
+    "cors": "^2.8.5",
     "date-fns": "3.6.0",
     "date-fns-tz": "^3.2.0",
+    "dotenv": "^16.4.5",
     "embla-carousel-react": "8.3.0",
+    "express": "^4.21.2",
     "input-otp": "1.2.4",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "0.462.0",
+    "mongoose": "^8.2.0",
     "next-themes": "0.3.0",
     "react": "18.3.1",
     "react-day-picker": "8.10.1",
@@ -69,13 +77,7 @@
     "tailwind-merge": "2.5.2",
     "tailwindcss-animate": "1.0.7",
     "vaul": "0.9.3",
-    "zod": "3.23.8",
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.18.3",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.2.0"
+    "zod": "3.23.8"
   },
   "devDependencies": {
     "@eslint/js": "9.9.0",
@@ -90,12 +92,13 @@
     "eslint-plugin-react-refresh": "0.4.9",
     "globals": "15.9.0",
     "lovable-tagger": "1.1.3",
+    "nodemon": "^3.1.0",
     "postcss": "8.4.47",
     "tailwindcss": "3.4.11",
+    "terser": "^5.39.0",
     "typescript": "5.5.3",
     "typescript-eslint": "8.0.1",
-    "vite": "5.4.14",
-    "nodemon": "^3.1.0"
+    "vite": "5.4.14"
   },
   "engines": {
     "node": ">=18.0.0",
