--- a/render.yaml
+++ b/render.yaml
@@ -15,19 +15,10 @@ services:
       - key: CORS_ORIGIN
         value: https://pool-league-manager.onrender.com
 
-  - type: web
+  - type: static
     name: pool-league-manager
-    env: node
-    buildCommand: npm install terser && npm install && npm run build
-    startCommand: npm start
-    staticPublishPath: ./dist
-    routes:
-      - type: rewrite
-        source: /*
-        destination: /index.html
-    envVars:
-      - key: PORT
-        value: 3000
+    buildCommand: ./build.sh
+    publishDir: dist
     headers:
       - path: /*
         name: Cache-Control
